--- a/business-field.html
+++ b/business-field.html
@@ -3,10 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
-    <script type="text/javascript" src="vendor.js"></script>
-    <script type="text/javascript" src="bundle.js"></script>
-
-    <title> Business Field</title>
+    <title>Business Field Data Table</title>
     <style>#loader {
         transition: all .3s ease-in-out;
         opacity: 1;
@@ -56,7 +53,7 @@
             opacity: 0
         }
     }</style>
-    <link href="style.css" rel="stylesheet">
+    <link href="assets/css/style.css" rel="stylesheet">
 </head>
 <body class="app">
 <div id="loader">
@@ -175,8 +172,7 @@
                     </li>
                     <li class="search-box"><a class="search-toggle no-pdd-right" href="javascript:void(0);"><i
                             class="search-icon ti-search pdd-right-10"></i> <i
-                            class="search-icon-close ti-close pdd-right-10"></i></a>
-                    </li>
+                            class="search-icon-close ti-close pdd-right-10"></i></a></li>
                     <li class="search-input"><input class="form-control" type="text" placeholder="Search..."></li>
                 </ul>
                 <ul class="nav-right">
@@ -186,8 +182,7 @@
                             class="ti-bell"></i></a>
                         <ul class="dropdown-menu">
                             <li class="pX-20 pY-15 bdB"><i class="ti-bell pR-10"></i> <span
-                                    class="fsz-sm fw-600 c-grey-900">Notifications</span>
-                            </li>
+                                    class="fsz-sm fw-600 c-grey-900">Notifications</span></li>
                             <li>
                                 <ul class="ovY-a pos-r scrollable lis-n p-0 m-0 fsz-sm">
                                     <li><a href="" class="peers fxw-nw td-n p-20 bdB c-grey-800 cH-blue bgcH-grey-100">
@@ -195,8 +190,7 @@
                                                                      src="https://randomuser.me/api/portraits/men/1.jpg"
                                                                      alt=""></div>
                                         <div class="peer peer-greed"><span><span class="fw-500">John Doe</span> <span
-                                                class="c-grey-600">liked your <span
-                                                class="text-dark">post</span></span></span>
+                                                class="c-grey-600">liked your <span class="text-dark">post</span></span></span>
                                             <p class="m-0">
                                                 <small class="fsz-xs">5 mins ago</small>
                                             </p>
@@ -207,8 +201,7 @@
                                                                      src="https://randomuser.me/api/portraits/men/2.jpg"
                                                                      alt=""></div>
                                         <div class="peer peer-greed"><span><span class="fw-500">Moo Doe</span> <span
-                                                class="c-grey-600">liked your <span
-                                                class="text-dark">cover image</span></span></span>
+                                                class="c-grey-600">liked your <span class="text-dark">cover image</span></span></span>
                                             <p class="m-0">
                                                 <small class="fsz-xs">7 mins ago</small>
                                             </p>
@@ -299,29 +292,76 @@
                     <li class="dropdown"><a href="" class="dropdown-toggle no-after peers fxw-nw ai-c lh-1"
                                             data-toggle="dropdown">
                         <div class="peer mR-10"><img class="w-2r bdrs-50p"
-                                                     src="https://randomuser.me/api/portraits/men/10.jpg"
-                                                     alt=""></div>
+                                                     src="https://randomuser.me/api/portraits/men/10.jpg" alt=""></div>
                         <div class="peer"><span class="fsz-sm c-grey-900">John Doe</span></div>
                     </a>
                         <ul class="dropdown-menu fsz-sm">
                             <li><a href="" class="d-b td-n pY-5 bgcH-grey-100 c-grey-700"><i
-                                    class="ti-settings mR-10"></i> <span>Setting</span></a>
-                            </li>
+                                    class="ti-settings mR-10"></i> <span>Setting</span></a></li>
                             <li><a href="" class="d-b td-n pY-5 bgcH-grey-100 c-grey-700"><i class="ti-user mR-10"></i>
                                 <span>Profile</span></a></li>
                             <li><a href="email.html" class="d-b td-n pY-5 bgcH-grey-100 c-grey-700"><i
-                                    class="ti-email mR-10"></i>
-                                <span>Messages</span></a></li>
+                                    class="ti-email mR-10"></i> <span>Messages</span></a></li>
                             <li role="separator" class="divider"></li>
                             <li><a href="" class="d-b td-n pY-5 bgcH-grey-100 c-grey-700"><i
-                                    class="ti-power-off mR-10"></i> <span>Logout</span></a>
-                            </li>
+                                    class="ti-power-off mR-10"></i> <span>Logout</span></a></li>
                         </ul>
                     </li>
                 </ul>
             </div>
         </div>
+        <main class="main-content bgc-grey-100">
+            <div id="mainContent">
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="bgc-white bd bdrs-3 p-20 mB-20"><h4 class="c-grey-900 mB-20">Business Field Data
+                                Table</h4>
+                                <table id="dataTable" class="table table-striped table-bordered " cellspacing="0"
+                                       width="100%">
+
+                                    <thead>
+                                    <tr>
+                                        <th>No</th>
+                                        <th>Business Field</th>
+                                    </tr>
+                                    </thead>
+                                    <tfoot>
+                                    <tr>
+                                        <th>No</th>
+                                        <th>Business Field</th>
+                                    </tr>
+                                    </tfoot>
+                                    <tbody>
+                                    <tr>
+                                        <td>1</td>
+                                        <td>Information Technology</td>
+
+                                    </tr>
+
+
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="bgc-white bd bdrs-3 p-20 mB-20"><h4 class="c-grey-900 mB-20">Add new business field</h4>
+                                <div class="form-group"><label>Business Field</label> <input
+                                        type="text" class="form-control"
+                                        placeholder="Enter new Business Field">
+                                </div>
+                                <button type="submit" class="btn btn-primary">Add</button>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </main>
+
     </div>
 </div>
+<script type="text/javascript" src="assets/js/vendor.js"></script>
+<script type="text/javascript" src="assets/js/bundle.js"></script>
 </body>
 </html>
