--- a/chat.html
+++ b/chat.html
@@ -53,7 +53,7 @@
             opacity: 0
         }
     }</style>
-    <link href="style.css" rel="stylesheet">
+    <link href="assets/css/style.css" rel="stylesheet">
 </head>
 <body class="app">
 <div id="loader">
@@ -471,7 +471,7 @@
         </footer>
     </div>
 </div>
-<script type="text/javascript" src="vendor.js"></script>
-<script type="text/javascript" src="bundle.js"></script>
+<script type="text/javascript" src="assets/js/vendor.js"></script>
+<script type="text/javascript" src="assets/js/bundle.js"></script>
 </body>
 </html>
