--- a/index.html
+++ b/index.html
@@ -53,10 +53,8 @@
             opacity: 0
         }
     }</style>
-    <link href="style.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link href="assets/css/style.css" rel="stylesheet">
+
 </head>
 <body class="app">
 <div id="loader">
@@ -829,7 +827,7 @@
         </footer>
     </div>
 </div>
-<script type="text/javascript" src="vendor.js"></script>
-<script type="text/javascript" src="bundle.js"></script>
+<script type="text/javascript" src="assets/js/vendor.js"></script>
+<script type="text/javascript" src="assets/js/bundle.js"></script>
 </body>
 </html>
