--- a/keyword.html
+++ b/keyword.html
@@ -344,8 +344,8 @@
                                         <td>mssql</td>
                                         <td>
                                             <form>
-                                                <input id="1" name='tags1' readonly value='tag1, tag 2, another tag'><br/>
-                                                <input class='tags'
+                                                <input  name='read1' readonly value='tag1, tag 2, another tag'><br/>
+                                                <input name='tags1'
                                                        placeholder='add some synonyms'
                                                        value='css, html, javascript, css' autofocus>
 
@@ -368,8 +368,8 @@
                                         <td>mssql</td>
                                         <td>
                                             <form>
-                                                <input id="2"  name='tags2' readonly value='tag1, tag 2, another tag'><br/>
-                                                <input class='tags'
+                                                <input  name='read2' readonly value='tag1, tag 2, another tag'><br/>
+                                                <input name='tags2'
                                                        placeholder='add some synonyms'
                                                        value='css, html, javascript, css' autofocus>
 
@@ -391,9 +391,9 @@
                                         <td>mssql</td>
                                         <td>
                                             <form>
-                                                <for</fori>
-                                                <input id="3"  name='tags3' readonly value='tag1, tag 2, another tag'><br/>
-                                                <input class='tags'
+
+                                                <input   name='read3' readonly value='tag1, tag 2, another tag'><br/>
+                                                <input name='tags3'
                                                        placeholder='add some synonyms'
                                                        value='css, html, javascript, css' autofocus>
 
@@ -415,8 +415,8 @@
                                         <td>mssql</td>
                                         <td>
                                             <form>
-                                                <input name='tags4' readonly value='tag1, tag 2, another tag'><br/>
-                                                <input class='tags'
+                                                <input name='read4' readonly value='tag1, tag 2, another tag'><br/>
+                                                <input name='tags4'
                                                        placeholder='add some synonyms'
                                                        value='css, html, javascript, css' autofocus>
 
@@ -438,8 +438,8 @@
                                         <td>mssql</td>
                                         <td>
                                             <form>
-                                                <input name='tags4' readonly value='tag1, tag 2, another tag'><br/>
-                                                <input class='tags'
+                                                <input name='read5' readonly value='tag1, tag 2, another tag'><br/>
+                                                <input name='tags5'
                                                        placeholder='add some synonyms'
                                                        value='css, html, javascript, css' autofocus>
 
@@ -461,8 +461,8 @@
                                         <td>mssql</td>
                                         <td>
                                             <form>
-                                                <input name='tags4' readonly value='tag1, tag 2, another tag'><br/>
-                                                <input class='tags'
+                                                <input name='read6' readonly value='tag1, tag 2, another tag'><br/>
+                                                <input name='tags6'
                                                        placeholder='add some synonyms'
                                                        value='css, html, javascript, css' autofocus>
 
@@ -498,68 +498,46 @@
 <script src="assets/js/tagify.js"></script>
 <link rel="stylesheet" href="assets/css/tagify.css">
 <!-- Initialize Tagify for both Input and Textaera -->
-<script>
-    document.forms[0].reset();
+
+<script data-name='readonly'>
 
 
-
-
+    (function () {
+        for (let i = 1; i <= 6; i++) {
+            document.forms[i-1].reset();
+            var input = document.querySelector('input[name=read'+i+']'),
+                tagify = new Tagify(input);
+        }
+    })()
 </script>
 
 
 <script data-name="basic">
     (function () {
 
-        var allInputs = document.getElementsByClassName('tags');
+
+        for (let i = 1; i <= 6; i++) {
+
+            var input = document.querySelector('input[name=tags'+i+']'),
+                // init Tagify script on the above inputs
+                tagify = new Tagify(input, {
+                    whitelist: ["A# .NET", "A# (Axiom)", "A-0 System", "A+", "A++", "ABAP", "ABC", "ABC ALGOL", "ABSET", "ABSYS", "ACC", "Accent", "Ace DASL", "ACL2", "Avicsoft", "ACT-III", "Action!", "ActionScript", "Ada", "Adenine", "Agda", "Agilent VEE", "Agora", "AIMMS", "Alef", "ALF", "ALGOL 58", "ALGOL 60", "ALGOL 68", "ALGOL W", "Alice", "Alma-0", "AmbientTalk", "Amiga E", "AMOS", "AMPL", "Apex (Salesforce.com)", "APL", "AppleScript", "Arc", "ARexx", "Argus", "AspectJ", "Assembly language", "ATS", "Ateji PX", "AutoHotkey", "Autocoder", "AutoIt", "AutoLISP / Visual LISP", "Averest", "AWK", "Axum", "Active Server Pages", "ASP.NET", "B", "Babbage", "Bash", "BASIC", "bc", "BCPL", "BeanShell", "Batch (Windows/Dos)", "Bertrand", "BETA", "Bigwig", "Bistro", "BitC", "BLISS", "Blockly", "BlooP", "Blue", "Boo", "Boomerang", "Bourne shell (including bash and ksh)", "BREW", "BPEL", "B", "C--", "C++ – ISO/IEC 14882", "C# – ISO/IEC 23270", "C/AL", "Caché ObjectScript", "C Shell", "Caml", "Cayenne", "CDuce", "Cecil", "Cesil", "Céu", "Ceylon", "CFEngine", "CFML", "Cg", "Ch", "Chapel", "Charity", "Charm", "Chef", "CHILL", "CHIP-8", "chomski", "ChucK", "CICS", "Cilk", "Citrine (programming language)", "CL (IBM)", "Claire", "Clarion", "Clean", "Clipper", "CLIPS", "CLIST", "Clojure", "CLU", "CMS-2", "COBOL – ISO/IEC 1989", "CobolScript – COBOL Scripting language", "Cobra", "CODE", "CoffeeScript", "ColdFusion", "COMAL", "Combined Programming Language (CPL)", "COMIT", "Common Intermediate Language (CIL)", "Common Lisp (also known as CL)", "COMPASS", "Component Pascal", "Constraint Handling Rules (CHR)", "COMTRAN", "Converge", "Cool", "Coq", "Coral 66", "Corn", "CorVision", "COWSEL", "CPL", "CPL", "Cryptol", "csh", "Csound", "CSP", "CUDA", "Curl", "Curry", "Cybil", "Cyclone", "Cython", "M2001", "M4", "M#", "Machine code", "MAD (Michigan Algorithm Decoder)", "MAD/I", "Magik", "Magma", "make", "Maple", "MAPPER now part of BIS", "MARK-IV now VISION:BUILDER", "Mary", "MASM Microsoft Assembly x86", "MATH-MATIC", "Mathematica", "MATLAB", "Maxima (see also Macsyma)", "Max (Max Msp – Graphical Programming Environment)", "MaxScript internal language 3D Studio Max", "Maya (MEL)", "MDL", "Mercury", "Mesa", "Metafont", "Microcode", "MicroScript", "MIIS", "Milk (programming language)", "MIMIC", "Mirah", "Miranda", "MIVA Script", "ML", "Model 204", "Modelica", "Modula", "Modula-2", "Modula-3", "Mohol", "MOO", "Mortran", "Mouse", "MPD", "Mathcad", "MSIL – deprecated name for CIL", "MSL", "MUMPS", "Mystic Programming L"],
+                    blacklist: ["react", "angular"]
+                });
 
 
-
-        var input = document.querySelector('input[class=tags]'),
-            // init Tagify script on the above inputs
-            tagify = new Tagify(input, {
-                whitelist: ["A# .NET", "A# (Axiom)", "A-0 System", "A+", "A++", "ABAP", "ABC", "ABC ALGOL", "ABSET", "ABSYS", "ACC", "Accent", "Ace DASL", "ACL2", "Avicsoft", "ACT-III", "Action!", "ActionScript", "Ada", "Adenine", "Agda", "Agilent VEE", "Agora", "AIMMS", "Alef", "ALF", "ALGOL 58", "ALGOL 60", "ALGOL 68", "ALGOL W", "Alice", "Alma-0", "AmbientTalk", "Amiga E", "AMOS", "AMPL", "Apex (Salesforce.com)", "APL", "AppleScript", "Arc", "ARexx", "Argus", "AspectJ", "Assembly language", "ATS", "Ateji PX", "AutoHotkey", "Autocoder", "AutoIt", "AutoLISP / Visual LISP", "Averest", "AWK", "Axum", "Active Server Pages", "ASP.NET", "B", "Babbage", "Bash", "BASIC", "bc", "BCPL", "BeanShell", "Batch (Windows/Dos)", "Bertrand", "BETA", "Bigwig", "Bistro", "BitC", "BLISS", "Blockly", "BlooP", "Blue", "Boo", "Boomerang", "Bourne shell (including bash and ksh)", "BREW", "BPEL", "B", "C--", "C++ – ISO/IEC 14882", "C# – ISO/IEC 23270", "C/AL", "Caché ObjectScript", "C Shell", "Caml", "Cayenne", "CDuce", "Cecil", "Cesil", "Céu", "Ceylon", "CFEngine", "CFML", "Cg", "Ch", "Chapel", "Charity", "Charm", "Chef", "CHILL", "CHIP-8", "chomski", "ChucK", "CICS", "Cilk", "Citrine (programming language)", "CL (IBM)", "Claire", "Clarion", "Clean", "Clipper", "CLIPS", "CLIST", "Clojure", "CLU", "CMS-2", "COBOL – ISO/IEC 1989", "CobolScript – COBOL Scripting language", "Cobra", "CODE", "CoffeeScript", "ColdFusion", "COMAL", "Combined Programming Language (CPL)", "COMIT", "Common Intermediate Language (CIL)", "Common Lisp (also known as CL)", "COMPASS", "Component Pascal", "Constraint Handling Rules (CHR)", "COMTRAN", "Converge", "Cool", "Coq", "Coral 66", "Corn", "CorVision", "COWSEL", "CPL", "CPL", "Cryptol", "csh", "Csound", "CSP", "CUDA", "Curl", "Curry", "Cybil", "Cyclone", "Cython", "M2001", "M4", "M#", "Machine code", "MAD (Michigan Algorithm Decoder)", "MAD/I", "Magik", "Magma", "make", "Maple", "MAPPER now part of BIS", "MARK-IV now VISION:BUILDER", "Mary", "MASM Microsoft Assembly x86", "MATH-MATIC", "Mathematica", "MATLAB", "Maxima (see also Macsyma)", "Max (Max Msp – Graphical Programming Environment)", "MaxScript internal language 3D Studio Max", "Maya (MEL)", "MDL", "Mercury", "Mesa", "Metafont", "Microcode", "MicroScript", "MIIS", "Milk (programming language)", "MIMIC", "Mirah", "Miranda", "MIVA Script", "ML", "Model 204", "Modelica", "Modula", "Modula-2", "Modula-3", "Mohol", "MOO", "Mortran", "Mouse", "MPD", "Mathcad", "MSIL – deprecated name for CIL", "MSL", "MUMPS", "Mystic Programming L"],
-                blacklist: ["react", "angular"]
-            });
+        }
 
 // "remove all tags" button event listener
         document.querySelector('.tags--removeAllBtn')
             .addEventListener('click', tagify.removeAllTags.bind(tagify))
 
-// Chainable event listeners
-        tagify.on('add', onAddTag)
-            .on('remove', onRemoveTag)
-            .on('invalid', onInvalidTag);
 
-// tag added callback
-        function onAddTag(e) {
-            console.log(e, e.detail);
-            console.log(tagify.DOM.originalInput.value)
-            tagify.off('add', onAddTag) // exmaple of removing a custom Tagify event
-        }
-
-// tag remvoed callback
-        function onRemoveTag(e) {
-            console.log(e, e.detail);
-        }
-
-// invalid tag added callback
-        function onInvalidTag(e) {
-            console.log(e, e.detail);
-        }
 
     })()
 </script>
 
 
-<script data-name='readonly'>
-    (function () {
-        for (let i = 1; i < 4; i++) {
-
-        var input = document.querySelector('input[name=tags'+i+']'),
-            tagify = new Tagify(input);
-        }
-    })()
-</script>
 
 
 </body>
