Create jobdetail page, fix listjob UI - MinhTHD

--- a/listjob.html
+++ b/listjob.html
@@ -46,7 +46,7 @@
                         <div type="button" class="btn btn-danger btn-sm">Hot job</div>
 
                         <div id="address">
-                            <p></p>Ho Chi Minh Quận 3
+                            <p>Ho Chi Minh Quận 3</p>
                         </div>
                         <div>2 hours ago</div>
                     </div>
