--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
@@ -19,78 +19,67 @@
     <script src="./node_modules/chart.js/samples/utils.js"></script>
 
 </head>
-
-<body>
+    <body>
     <!-- Header -->
-    <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
+
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
         <a class="navbar-brand" href="#">
-            <img src="./images/logo.png" width="90" height="30" class="d-inline-block align-top" alt="">
+            <img src="./images/logo-ctsa.png" width="90" height="30" class="d-inline-block align-top" alt="CTSA logo">
         </a>
 
 
+        <div class="collapse navbar-collapse  justify-content-center  " id="navbarSupportedContent">
+            <a class="mx-5" href="#">Tuyển Dụng</a>
+            <a class="mx-5" href="#">Thống Kê</a>
+            <a class="mx-5" href="#">Tuyển Dụng</a>
+            <a class="mx-5" href="#">Thống Kê</a>
 
-
-        <form class="form-inline">
-            <button class="btn btn-outline-dark">Đăng Nhập</button>&nbsp;&nbsp;
-            <button class="btn btn-outline-dark">...</button>&nbsp;&nbsp;
-            <button class="btn btn-outline-dark">Tuyển Dụng</button>&nbsp;&nbsp;
-            <button class="btn btn-outline-dark">Trang Chủ</button>
-
-        </form>
-
-
+        </div>
+        <span class="fa-stack">
+            <i class="	fa fa-user-circle-o fa-stack-1x" style="font-size:36px; color:white"></i>
+        </span>
     </nav>
     <!-- End of Header -->
     <div class="container">
-        <div class="row jobdetail">
+        <div class="row justify-content-center">
             <!-- Company summary detail div -->
-            <div class="col-sm-4">
-                <div id="sidebar" class="card">
-                    <div class="img-border">
-                        <a href="#">
-                            <img class="card-img-top" alt="Ranking Image" src=".\images\ranking.png">
-                        </a>
-                    </div>
-
-
-                </div>
+            <div class="col-md-4 pr-5">
+                <a href="#">
+                    <img class="card-img-top" alt="Ranking Image" src=".\images\pencil-with-card.png">
+                </a>
             </div>
-            <div class="col-sm-8">
-
-                <!-- div each row of a job -->
-
+            <div class="col-md-5 pl-5" style="border-left: 1px solid grey">
+                <h3>Hãy cho chúng tôi biết thêm về bạn</h3>
+                <div class="role  ">
+                    <b>Bạn đang làm về chuyên ngành gì?</b><br />
+                    <button class="btn btn-outline-dark my-2 mx-1">Developer</button>
+                    <button class="btn btn-outline-dark my-2 mx-1">Tester</button>
+                    <button class="btn btn-outline-dark my-2 mx-1">Desginer</button>
+                    <button class="btn btn-outline-dark my-2 mx-1">Engineer</button>
+                    <button class="btn btn-outline-dark my-2 mx-1">Project Manager</button>
+                    <button class="btn btn-outline-dark my-2 mx-1">English</button>
+                    <button class="btn btn-outline-dark my-2 mx-1">Japanese</button>
+                    <button class="btn btn-outline-dark my-2 mx-1">Other</button>
+                </div>
 
 
 
                 <!-- Charts -->
-
-
-
-
-
-                <canvas id="bar-chart-horizontal "></canvas>
-
-
-
-
-
-
-
-
-
+                <!-- <canvas id="bar-chart-horizontal "></canvas> -->
 
             </div>
 
 
         </div>
-        <hr>
+        <!-- <hr> -->
         <!-- Search bar -->
-        <div class="row justify-content-center ">
+        <!-- <div class="row justify-content-center ">
             <div class="col-md-5">
                 <div class="input-group ">
                     <div class="input-group-btn search-panel">
                         <div class="dropdown">
-                            <button class="btn btn-secondary dropdown-toggle" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <button class="btn btn-secondary dropdown-toggle" id="dropdownMenuButton" data-toggle="dropdown"
+                                aria-haspopup="true" aria-expanded="false">
                                 Filter
                             </button>
                             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
@@ -109,11 +98,11 @@
                     </span>
                 </div>
             </div>
-        </div>
+        </div> -->
 
     </div>
 
-    <script>
+    <!-- <script>
         new Chart(document.getElementById("bar-chart-horizontal "), {
             type: 'horizontalBar',
             data: {
@@ -175,7 +164,7 @@
         // Chart.defaults.scale.gridLines.display = false;
 
         window.onload = function () {
-            var ctx = document.getElementById('canvas').getContext('2d');
+            // var ctx = document.getElementById('canvas').getContext('2d');
             window.myHorizontalBar = new Chart(ctx, {
                 type: 'horizontalBar',
                 data: horizontalBarChartData,
@@ -199,8 +188,8 @@
             });
 
         }
-    </script>
-    <script src=".\js\search.js" />
+    </script> -->
+
 </body>
 
 </html>
