Update css, index page, add new pencil image - MinhTHD

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <!-- Company summary detail div -->
             <div class="col-md-4 "style="height: 900px; padding-left: 5%" >
                 <a href="#">
-                    <img  alt="Ranking Image" src=".\images\pencil-with-card.png" style="height: 100%" >
+                    <img  alt="Ranking Image" src=".\images\pencil-withcard-withoutbottom.png" style="height: 100%" >
                 </a>
             </div>
             <div class="col-md-5 pl-5" style="padding-top:10%">
