Edit index page - MinhTHD

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body id="home">
     <!-- Header -->
 
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark" style="height: 50px">
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark" style="height: 45px">
         <a class="navbar-brand" href=".\index.html">
             <img src="./images/logo-ctsa.png" width="90" height="30" class="d-inline-block align-top" alt="CTSA logo">
         </a>
@@ -51,42 +51,64 @@
                     <img alt="Ranking Image" src=".\images\pencil-withcard-withoutbottom.png" style="height: 100%">
                 </a>
             </div>
-            <div class="col-md-5 pl-5" style="padding-top:10%">
+            <div class="col-md-5 pl-5 forminput" style="padding-top:10%">
                 <h3>Hãy cho chúng tôi biết thêm về bạn</h3>
 
-                <b class="head1">Bạn đang làm về chuyên ngành gì?</b><br />
-                <div class="role1">
-                    <button class="btn btn-outline-dark my-2 mx-1 role1">Developer</button>
-                    <button class="btn btn-outline-dark my-2 mx-1 role1">Tester</button>
-                    <button class="btn btn-outline-dark my-2 mx-1 role1">Desginer</button>
-                    <button class="btn btn-outline-dark my-2 mx-1 role1">Engineer</button>
-                    <button class="btn btn-outline-dark my-2 mx-1 role1">Project Manager</button>
-                    <button class="btn btn-outline-dark my-2 mx-1 role1">English</button>
-                    <button class="btn btn-outline-dark my-2 mx-1 role1">Japanese</button>
-                    <button class="btn btn-outline-dark my-2 mx-1 role1">Other</button>
+                <b class="head1"><span class="fa-stack">
+
+                        <span class="fa fa-circle-o fa-stack-2x"></span>
+
+                        <strong class="fa-stack-1x" style="font-size: 20px;">
+                            1   
+                        </strong>
+                    </span> -  Lorem ipsum dolor sit amet, consectetur adipiscing elit?</b><br />
+                <div class="role1 ml-3 pl-4" style="border-left-style: dashed; border-width:3px">
+                    <button class="btn btn-light my-2 mx-1 role1">Developer</button>
+                    <button class="btn btn-light my-2 mx-1 role1">Tester</button>
+                    <button class="btn btn-light my-2 mx-1 role1">Desginer</button>
+                    <button class="btn btn-light my-2 mx-1 role1">Engineer</button>
+                    <button class="btn btn-light my-2 mx-1 role1">Project Manager</button>
+                    <button class="btn btn-light my-2 mx-1 role1">English</button>
+                    <button class="btn btn-light my-2 mx-1 role1">Japanese</button>
+                    <button class="btn btn-light my-2 mx-1 role1">Other</button>
                 </div>
-                <b class="head2">lorem ipsum asdasdasdasdasdasdasdasda</b><br />
-                <div class="role2 hideaway">
-                    <button class="btn btn-outline-dark my-2 mx-1 role2">Developer</button>
-                    <button class="btn btn-outline-dark my-2 mx-1 role2">Tester</button>
-                    <button class="btn btn-outline-dark my-2 mx-1 role2">Desginer</button>
-                    <button class="btn btn-outline-dark my-2 mx-1 role2">Engineer</button>
-                    <button class="btn btn-outline-dark my-2 mx-1 role2">Project Manager</button>
-                    <button class="btn btn-outline-dark my-2 mx-1 role2">English</button>
-                    <button class="btn btn-outline-dark my-2 mx-1 role2">Japanese</button>
-                    <button class="btn btn-outline-dark my-2 mx-1 role2">Other</button>
+                <b class="head2"><span class="fa-stack">
+
+                        <span class="fa fa-circle-o fa-stack-2x"></span>
+
+                        <strong class="fa-stack-1x" style="font-size: 20px;">
+                            2
+                        </strong>
+                    </span> - Vivamus lobortis mi. Fusce ornare eros eu feugiat tempor?</b><br />
+                <div class="role2 hideaway ml-3 pl-4" style="border-left-style: dashed; border-width:3px">
+                    <button class="btn btn-light my-2 mx-1 role2">Developer</button>
+                    <button class="btn btn-light my-2 mx-1 role2">Tester</button>
+                    <button class="btn btn-light my-2 mx-1 role2">Desginer</button>
+                    <button class="btn btn-light my-2 mx-1 role2">Engineer</button>
+                    <button class="btn btn-light my-2 mx-1 role2">Project Manager</button>
+                    <button class="btn btn-light my-2 mx-1 role2">English</button>
+                    <button class="btn btn-light my-2 mx-1 role2">Japanese</button>
+                    <button class="btn btn-light my-2 mx-1 role2">Other</button>
                 </div>
-                <b class="head3">123345678</b><br />
-                <div class="role3 hideaway">
-                    <button class="btn btn-outline-dark my-2 mx-1 role3">Developer</button>
-                    <button class="btn btn-outline-dark my-2 mx-1 role3">Tester</button>
-                    <button class="btn btn-outline-dark my-2 mx-1 role3">Desginer</button>
-                    <button class="btn btn-outline-dark my-2 mx-1 role3">Engineer</button>
-                    <button class="btn btn-outline-dark my-2 mx-1 role3">Project Manager</button>
-                    <button class="btn btn-outline-dark my-2 mx-1 role3">English</button>
-                    <button class="btn btn-outline-dark my-2 mx-1 role3">Japanese</button>
-                    <button class="btn btn-outline-dark my-2 mx-1 role3">Other</button>
+                <b class="head3"><span class="fa-stack">
+
+                        <span class="fa fa-circle-o fa-stack-2x"></span>
+
+                        <strong class="fa-stack-1x" style="font-size: 20px;">
+                            3
+                        </strong>
+                    </span> - Nulla aliquam euismod dui sit amet finibus?</b><br />
+                <div class="role3 hideaway ml-3 pl-4">
+                    <button class="btn btn-light my-2 mx-1 role3">Developer</button>
+                    <button class="btn btn-light my-2 mx-1 role3">Tester</button>
+                    <button class="btn btn-light my-2 mx-1 role3">Desginer</button>
+                    <button class="btn btn-light my-2 mx-1 role3">Engineer</button>
+                    <button class="btn btn-light my-2 mx-1 role3">Project Manager</button>
+                    <button class="btn btn-light my-2 mx-1 role3">English</button>
+                    <button class="btn btn-light my-2 mx-1 role3">Japanese</button>
+                    <button class="btn btn-light my-2 mx-1 role3">Other</button>
                 </div>
+                <div id="comfirm" class="hideaway"> <button class="btn btn-info btn-lg btn-block my-3 " style="width: 90%;background-color:#213e3a; border: none;">Confirm</button></div>
 
 
 
@@ -103,24 +125,39 @@
             // $(".role1").addClass("hideaway");
             $(".role1").hide(500);
             $(".role2").show(500);
-            $(".role3").hide(500)
+            $(".role3").hide(500);
+            $("#comfirm").hide(500);
         });
         $(".role2").click(function () {
             $(".role1").hide(500);
             $(".role2").hide(500);
-           
+
             $(".role3").show(500);
+            $("#comfirm").hide(500);
         });
         $(".head1").click(function () {
             $(".role1").show(500);
             $(".role2").hide(500);
             $(".role3").hide(500)
-          
+            $("#comfirm").hide(500);
         });
         $(".head2").click(function () {
             $(".role1").hide(500);
             $(".role2").show(500);
-            $(".role3").hide(500)
+            $(".role3").hide(500);
+            $("#comfirm").hide(500);
+        });
+        $(".head3").click(function () {
+            $(".role1").hide(500);
+            $(".role2").hide(500);
+            $(".role3").show(500);
+            $("#comfirm").hide(500);
+        });
+        $(".role3").click(function () {
+            $(".role1").hide(500);
+            $(".role2").hide(500);
+
+            $("#comfirm").show();
         });
     </script>
 </body>
