Update right border of the form in index page - MinhTHD

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                             1   
                         </strong>
                     </span> -  Lorem ipsum dolor sit amet, consectetur adipiscing elit?</b><br />
-                <div class="role1 ml-3 pl-4" style="border-left-style: dashed; border-width:3px">
+                <div class="role1 ml-3 pl-4 my-2" style="border-left-style: dashed; border-width:3px;">
                     <button class="btn btn-light my-2 mx-1 role1">Developer</button>
                     <button class="btn btn-light my-2 mx-1 role1">Tester</button>
                     <button class="btn btn-light my-2 mx-1 role1">Desginer</button>
@@ -80,7 +80,7 @@
                             2
                         </strong>
                     </span> - Vivamus lobortis mi. Fusce ornare eros eu feugiat tempor?</b><br />
-                <div class="role2 hideaway ml-3 pl-4" style="border-left-style: dashed; border-width:3px">
+                <div class="role2 hideaway ml-3 pl-4 my-2" style="border-left-style: dashed; border-width:3px">
                     <button class="btn btn-light my-2 mx-1 role2">Developer</button>
                     <button class="btn btn-light my-2 mx-1 role2">Tester</button>
                     <button class="btn btn-light my-2 mx-1 role2">Desginer</button>
@@ -98,7 +98,7 @@
                             3
                         </strong>
                     </span> - Nulla aliquam euismod dui sit amet finibus?</b><br />
-                <div class="role3 hideaway ml-3 pl-4">
+                <div class="role3 hideaway ml-3 pl-4 my-2">
                     <button class="btn btn-light my-2 mx-1 role3">Developer</button>
                     <button class="btn btn-light my-2 mx-1 role3">Tester</button>
                     <button class="btn btn-light my-2 mx-1 role3">Desginer</button>
