--- a/index.html
+++ b/index.html
@@ -14,10 +14,6 @@
 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-
-    <script src="./node_modules/chart.js/dist/Chart.bundle.min.js"></script>
-    <script src="./node_modules/chart.js/samples/utils.js"></script>
-
 </head>
 
 <body id="home">
@@ -46,67 +42,70 @@
     <div class="fluid-container">
         <div class="row justify-content-between">
             <!-- Company summary detail div -->
-            <div class="col-md-4 " style="height: 900px; padding-left: 5%">
+            <div class="col-md-5 " style="padding-left: 5%">
                 <a href="#">
-                    <img alt="Ranking Image" src=".\images\pencil-withcard-withoutbottom.png" style="height: 100%">
+                    <img id="pencil-image" alt="Ranking Image" src=".\images\pencil-withcard-withoutbottom.png" style="height: 100%">
                 </a>
             </div>
-            <div class="col-md-5 pl-5 forminput" style="padding-top:10%">
-                <h3>Hãy cho chúng tôi biết thêm về bạn</h3>
+            <div class="col-md-5 pl-3 forminput" style="padding-top:5%">
+                <span style="font-size: 50px">CTSA</span><br>
+                <span style="font-size: 40px">Career Trend Suggestions</span><br><br>
+                
+                <span style="font-size: 28px;">Hãy cho chúng tôi biết thêm về bạn</span><br>
 
-                <b class="head1"><span class="fa-stack">
-
+                <span class="head1" style="font-size: 18px">
+                    <span class="fa-stack">
                         <span class="fa fa-circle-o fa-stack-2x"></span>
-
                         <strong class="fa-stack-1x" style="font-size: 20px;">
-                            1   
+                            1
                         </strong>
-                    </span> -  Lorem ipsum dolor sit amet, consectetur adipiscing elit?</b><br />
+                    </span> - Lorem ipsum dolor sit amet, consectetur adipiscing elit?
+                </span><br />
                 <div class="role1 ml-3 pl-4 my-2" style="border-left-style: dashed; border-width:3px;">
-                    <button class="btn btn-light my-2 mx-1 role1">Developer</button>
-                    <button class="btn btn-light my-2 mx-1 role1">Tester</button>
-                    <button class="btn btn-light my-2 mx-1 role1">Desginer</button>
-                    <button class="btn btn-light my-2 mx-1 role1">Engineer</button>
-                    <button class="btn btn-light my-2 mx-1 role1">Project Manager</button>
-                    <button class="btn btn-light my-2 mx-1 role1">English</button>
-                    <button class="btn btn-light my-2 mx-1 role1">Japanese</button>
-                    <button class="btn btn-light my-2 mx-1 role1">Other</button>
+                    <button class="btn btn-outline-dark my-2 mx-1 role1">Developer</button>
+                    <button class="btn btn-outline-dark my-2 mx-1 role1">Tester</button>
+                    <button class="btn btn-outline-dark my-2 mx-1 role1">Desginer</button>
+                    <button class="btn btn-outline-dark my-2 mx-1 role1">Engineer</button>
+                    <button class="btn btn-outline-dark my-2 mx-1 role1">Project Manager</button>
+                    <button class="btn btn-outline-dark my-2 mx-1 role1">English</button>
+                    <button class="btn btn-outline-dark my-2 mx-1 role1">Japanese</button>
+                    <button class="btn btn-outline-dark my-2 mx-1 role1">Other</button>
                 </div>
-                <b class="head2"><span class="fa-stack">
+                <span style="font-size: 18px" class="head2"><span class="fa-stack">
 
                         <span class="fa fa-circle-o fa-stack-2x"></span>
 
                         <strong class="fa-stack-1x" style="font-size: 20px;">
                             2
                         </strong>
-                    </span> - Vivamus lobortis mi. Fusce ornare eros eu feugiat tempor?</b><br />
+                    </span> - Vivamus lobortis mi. Fusce ornare eros eu feugiat tempor?</span><br />
                 <div class="role2 hideaway ml-3 pl-4 my-2" style="border-left-style: dashed; border-width:3px">
-                    <button class="btn btn-light my-2 mx-1 role2">Developer</button>
-                    <button class="btn btn-light my-2 mx-1 role2">Tester</button>
-                    <button class="btn btn-light my-2 mx-1 role2">Desginer</button>
-                    <button class="btn btn-light my-2 mx-1 role2">Engineer</button>
-                    <button class="btn btn-light my-2 mx-1 role2">Project Manager</button>
-                    <button class="btn btn-light my-2 mx-1 role2">English</button>
-                    <button class="btn btn-light my-2 mx-1 role2">Japanese</button>
-                    <button class="btn btn-light my-2 mx-1 role2">Other</button>
+                    <button class="btn btn-outline-dark my-2 mx-1 role2">Developer</button>
+                    <button class="btn btn-outline-dark my-2 mx-1 role2">Tester</button>
+                    <button class="btn btn-outline-dark my-2 mx-1 role2">Desginer</button>
+                    <button class="btn btn-outline-dark my-2 mx-1 role2">Engineer</button>
+                    <button class="btn btn-outline-dark my-2 mx-1 role2">Project Manager</button>
+                    <button class="btn btn-outline-dark my-2 mx-1 role2">English</button>
+                    <button class="btn btn-outline-dark my-2 mx-1 role2">Japanese</button>
+                    <button class="btn btn-outline-dark my-2 mx-1 role2">Other</button>
                 </div>
-                <b class="head3"><span class="fa-stack">
+                <span style="font-size: 18px" class="head3"><span class="fa-stack">
 
                         <span class="fa fa-circle-o fa-stack-2x"></span>
 
                         <strong class="fa-stack-1x" style="font-size: 20px;">
                             3
                         </strong>
-                    </span> - Nulla aliquam euismod dui sit amet finibus?</b><br />
+                    </span> - Nulla aliquam euismod dui sit amet finibus?</span><br>
                 <div class="role3 hideaway ml-3 pl-4 my-2">
-                    <button class="btn btn-light my-2 mx-1 role3">Developer</button>
-                    <button class="btn btn-light my-2 mx-1 role3">Tester</button>
-                    <button class="btn btn-light my-2 mx-1 role3">Desginer</button>
-                    <button class="btn btn-light my-2 mx-1 role3">Engineer</button>
-                    <button class="btn btn-light my-2 mx-1 role3">Project Manager</button>
-                    <button class="btn btn-light my-2 mx-1 role3">English</button>
-                    <button class="btn btn-light my-2 mx-1 role3">Japanese</button>
-                    <button class="btn btn-light my-2 mx-1 role3">Other</button>
+                    <button class="btn btn-outline-dark my-2 mx-1 role3">Developer</button>
+                    <button class="btn btn-outline-dark my-2 mx-1 role3">Tester</button>
+                    <button class="btn btn-outline-dark my-2 mx-1 role3">Desginer</button>
+                    <button class="btn btn-outline-dark my-2 mx-1 role3">Engineer</button>
+                    <button class="btn btn-outline-dark my-2 mx-1 role3">Project Manager</button>
+                    <button class="btn btn-outline-dark my-2 mx-1 role3">English</button>
+                    <button class="btn btn-outline-dark my-2 mx-1 role3">Japanese</button>
+                    <button class="btn btn-outline-dark my-2 mx-1 role3">Other</button>
                 </div>
                 <div id="comfirm" class="hideaway"> <button class="btn btn-info btn-lg btn-block my-3 " style="width: 90%;background-color:#213e3a; border: none;">Confirm</button></div>
 
@@ -122,43 +121,58 @@
     </div>
     <script>
         $(".role1").click(function () {
-            // $(".role1").addClass("hideaway");
-            $(".role1").hide(500);
-            $(".role2").show(500);
-            $(".role3").hide(500);
-            $("#comfirm").hide(500);
-        });
-        $(".role2").click(function () {
-            $(".role1").hide(500);
-            $(".role2").hide(500);
 
-            $(".role3").show(500);
-            $("#comfirm").hide(500);
+            $(".role1").slideUp(1000);
+            $(".role2").slideDown(1000);
+            $(".role3").slideUp(1000);
+            $("#comfirm").slideUp(1000);
         });
-        $(".head1").click(function () {
-            $(".role1").show(500);
-            $(".role2").hide(500);
-            $(".role3").hide(500)
-            $("#comfirm").hide(500);
-        });
-        $(".head2").click(function () {
-            $(".role1").hide(500);
-            $(".role2").show(500);
-            $(".role3").hide(500);
-            $("#comfirm").hide(500);
-        });
-        $(".head3").click(function () {
-            $(".role1").hide(500);
-            $(".role2").hide(500);
-            $(".role3").show(500);
-            $("#comfirm").hide(500);
+
+
+
+        // $(".role1").click(function () {
+        //     $("role1").animate({
+        //         opacity: 0.25,
+        //         left: "+=50",
+        //         height: "toggle"
+        //     });
+        // });
+        $(".role2").click(function () {
+            $(".role1").slideUp(1000);
+            $(".role2").slideUp(1000);
+            $(".role3").slideDown(1000);
+            $("#comfirm").slideUp(1000);
         });
         $(".role3").click(function () {
-            $(".role1").hide(500);
-            $(".role2").hide(500);
-
-            $("#comfirm").show();
+            $(".role1").slideUp(1000);
+            $(".role2").slideUp(1000);
+            $("#comfirm").slideDown(1000);
         });
+        $(".head1").click(function () {
+            $(".role1").slideDown(1000);
+            $(".role2").slideUp(1000);
+            $(".role3").slideUp(1000)
+            $("#comfirm").slideUp(1000);
+        });
+        $(".head2").click(function () {
+            $(".role1").slideUp(1000);
+            $(".role2").slideDown(1000);
+            $(".role3").slideUp(1000);
+            $("#comfirm").slideUp(1000);
+        });
+        $(".head3").click(function () {
+            $(".role1").slideUp(1000);
+            $(".role2").slideUp(1000);
+            $(".role3").slideDown(1000);
+            $("#comfirm").slideUp(1000);
+        });
+
+    </script>
+    <script>
+        window.onresize = function () {
+            var img = document.getElementById('pencil-image');
+            img.style.width = "100%";
+        };
     </script>
 </body>
 
