Update UI, change background, fix fomrinput, etc - MinhTHD

--- a/index.html
+++ b/index.html
@@ -47,21 +47,21 @@
                     <img id="pencil-image" alt="Ranking Image" src=".\images\pencil-withcard-withoutbottom.png" style="height: 100%">
                 </a>
             </div>
-            <div class="col-md-5 pl-3 forminput" style="padding-top:5%">
-                <span style="font-size: 50px">CTSA</span><br>
-                <span style="font-size: 40px">Career Trend Suggestions</span><br><br>
+            <div class="col-md-5 mr-3 forminput" style="padding-top:5%; ">
+                <span style="font-size: 55px">CTSA</span><br>
+                <span style="font-size: 55px">Career Trend Suggestions</span><br><br>
                 
                 <span style="font-size: 28px;">Hãy cho chúng tôi biết thêm về bạn</span><br>
 
-                <span class="head1" style="font-size: 18px">
+                <span class="head1" style="font-size: 24px">
                     <span class="fa-stack">
-                        <span class="fa fa-circle-o fa-stack-2x"></span>
-                        <strong class="fa-stack-1x" style="font-size: 20px;">
+                        <span class="fa fa-circle fa-stack-2x" style="color: #ffb751"></span>
+                        <span class="fa-stack-1x" style="font-size: 20px;">
                             1
-                        </strong>
-                    </span> - Lorem ipsum dolor sit amet, consectetur adipiscing elit?
+                        </span>
+                    </span>- Lorem ipsum dolor sit amet, consectetur adipiscing elit?
                 </span><br />
-                <div class="role1 ml-3 pl-4 my-2" style="border-left-style: dashed; border-width:3px;">
+                <div class="role1 mx-4 pl-4 my-2" style="border-left-style: dashed; border-width:3px;">
                     <button class="btn btn-outline-dark my-2 mx-1 role1">Developer</button>
                     <button class="btn btn-outline-dark my-2 mx-1 role1">Tester</button>
                     <button class="btn btn-outline-dark my-2 mx-1 role1">Desginer</button>
@@ -71,15 +71,14 @@
                     <button class="btn btn-outline-dark my-2 mx-1 role1">Japanese</button>
                     <button class="btn btn-outline-dark my-2 mx-1 role1">Other</button>
                 </div>
-                <span style="font-size: 18px" class="head2"><span class="fa-stack">
-
-                        <span class="fa fa-circle-o fa-stack-2x"></span>
-
-                        <strong class="fa-stack-1x" style="font-size: 20px;">
+                <span style="font-size: 24px" class="head2">
+                    <span class="fa-stack">
+                        <span class="fa fa-circle fa-stack-2x" style="color: #ffb751"></span>
+                        <span class="fa-stack-1x" style="font-size: 20px;">
                             2
-                        </strong>
-                    </span> - Vivamus lobortis mi. Fusce ornare eros eu feugiat tempor?</span><br />
-                <div class="role2 hideaway ml-3 pl-4 my-2" style="border-left-style: dashed; border-width:3px">
+                        </span>
+                    </span>- Vivamus lobortis mi. Fusce ornare eros eu feugiat tempor?</span><br />
+                <div class="role2 hideaway mx-4 pl-4 my-2" style="border-left-style: dashed; border-width:3px">
                     <button class="btn btn-outline-dark my-2 mx-1 role2">Developer</button>
                     <button class="btn btn-outline-dark my-2 mx-1 role2">Tester</button>
                     <button class="btn btn-outline-dark my-2 mx-1 role2">Desginer</button>
@@ -89,15 +88,14 @@
                     <button class="btn btn-outline-dark my-2 mx-1 role2">Japanese</button>
                     <button class="btn btn-outline-dark my-2 mx-1 role2">Other</button>
                 </div>
-                <span style="font-size: 18px" class="head3"><span class="fa-stack">
-
-                        <span class="fa fa-circle-o fa-stack-2x"></span>
-
-                        <strong class="fa-stack-1x" style="font-size: 20px;">
-                            3
-                        </strong>
-                    </span> - Nulla aliquam euismod dui sit amet finibus?</span><br>
-                <div class="role3 hideaway ml-3 pl-4 my-2">
+                <span style="font-size: 24px" class="head3">
+                    <span class="fa-stack">
+                    <span class="fa fa-circle fa-stack-2x" style="color: #ffb751"></span>
+                    <span class="fa-stack-1x" style="font-size: 20px;">
+                        3
+                    </span>
+                    </span>- Nulla aliquam euismod dui sit amet finibus?</span><br>
+                <div class="role3 hideaway mx-4 pl-4 my-2">
                     <button class="btn btn-outline-dark my-2 mx-1 role3">Developer</button>
                     <button class="btn btn-outline-dark my-2 mx-1 role3">Tester</button>
                     <button class="btn btn-outline-dark my-2 mx-1 role3">Desginer</button>
@@ -122,10 +120,10 @@
     <script>
         $(".role1").click(function () {
 
-            $(".role1").slideUp(1000);
-            $(".role2").slideDown(1000);
-            $(".role3").slideUp(1000);
-            $("#comfirm").slideUp(1000);
+            $(".role1").slideUp(600);
+            $(".role2").slideDown(600);
+            $(".role3").slideUp(600);
+            $("#comfirm").slideUp(600);
         });
 
 
@@ -138,33 +136,33 @@
         //     });
         // });
         $(".role2").click(function () {
-            $(".role1").slideUp(1000);
-            $(".role2").slideUp(1000);
-            $(".role3").slideDown(1000);
-            $("#comfirm").slideUp(1000);
+            $(".role1").slideUp(600);
+            $(".role2").slideUp(600);
+            $(".role3").slideDown(600);
+            $("#comfirm").slideUp(600);
         });
         $(".role3").click(function () {
-            $(".role1").slideUp(1000);
-            $(".role2").slideUp(1000);
-            $("#comfirm").slideDown(1000);
+            $(".role1").slideUp(600);
+            $(".role2").slideUp(600);
+            $("#comfirm").slideDown(600);
         });
         $(".head1").click(function () {
-            $(".role1").slideDown(1000);
-            $(".role2").slideUp(1000);
-            $(".role3").slideUp(1000)
-            $("#comfirm").slideUp(1000);
+            $(".role1").slideDown(600);
+            $(".role2").slideUp(600);
+            $(".role3").slideUp(600)
+            $("#comfirm").slideUp(600);
         });
         $(".head2").click(function () {
-            $(".role1").slideUp(1000);
-            $(".role2").slideDown(1000);
-            $(".role3").slideUp(1000);
-            $("#comfirm").slideUp(1000);
+            $(".role1").slideUp(600);
+            $(".role2").slideDown(600);
+            $(".role3").slideUp(600);
+            $("#comfirm").slideUp(600);
         });
         $(".head3").click(function () {
-            $(".role1").slideUp(1000);
-            $(".role2").slideUp(1000);
-            $(".role3").slideDown(1000);
-            $("#comfirm").slideUp(1000);
+            $(".role1").slideUp(600);
+            $(".role2").slideUp(600);
+            $(".role3").slideDown(600);
+            $("#comfirm").slideUp(600);
         });
 
     </script>
