Add 2nd homepage prototype, add 2 summary pages prototype - MinhTHD

--- a/index-alternative.html
+++ b/index-alternative.html
@@ -42,14 +42,15 @@
     <div class="fluid-container">
         <div class="row justify-content-between">
             <!-- Company summary detail div -->
-            <div class="col-md-5 " style="padding-left: 5%">
+            <div class="col-md-6 "  >
+                <span style="font-size: 200px; color:white; padding-left:10%;">CTSA</span><br>
                 <a href="#">
-                    <img id="pencil-image" alt="Ranking Image" src=".\images\pencil-withcard-withoutbottom.png" style="height: 100%">
+                    <img style="margin-top: 5%" alt="Ranking Image" src=".\images\ranking2.png">
                 </a>
             </div>
-            <div class="col-md-5 mr-3 forminput" style="padding-top:5%; ">
-                <span style="font-size: 55px">CTSA</span><br>
-                <span style="font-size: 55px">Career Trend Suggestions</span><br><br>
+            <div class="col-md-5 mr-3 forminput" style="padding-top:8.5%; ">
+               
+                <span style="font-size: 55px">Career Trend Suggestions</span><br><br><br><br>
                 
                 <span style="font-size: 28px;">Hãy cho chúng tôi biết thêm về bạn</span><br>
 
