--- a/summary.html
+++ b/summary.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Trang chủ</title>
+    <title>Thống kê 2</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href=".\css\tab.css">
 
@@ -37,7 +37,13 @@
         </span>
     </nav>
     <!-- End of Header -->
+<style>
+ body {
+    background-color: #000;
 
+    font-size: 18px;
+  }
+</style>
     <!-- Content DIV -->
     
        
