Add summary page - MinhTHD

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 
-<body id="home">
+<body id="homebody">
     <!-- Header -->
 
     <nav class="navbar navbar-expand-md navbar-dark bg-dark" style="height: 45px">
@@ -25,7 +25,7 @@
         </a>
 
 
-        <div class="collapse navbar-collapse  justify-content-center  " id="navbarSupportedContent">
+        <div class="collapse navbar-collapse  justify-content-center menu " id="navbarSupportedContent">
             <a class="mx-5" href="#">Tuyển Dụng</a>
             <a class="mx-5" href=".\graph.html">Thống Kê</a>
             <a class="mx-5" href="#">Tuyển Dụng</a>
@@ -39,7 +39,7 @@
     <!-- End of Header -->
 
     <!-- Content DIV -->
-    <div class="fluid-container">
+    <div class="container-fluid">
         <div class="row justify-content-between">
             <!-- Company summary detail div -->
             <div class="col-md-5 " style="padding-left: 5%">
