--- a/index-alternative.html
+++ b/index-alternative.html
@@ -16,7 +16,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 
-<body id="home">
+<body id="homebody">
     <!-- Header -->
 
     <nav class="navbar navbar-expand-md navbar-dark bg-dark" style="height: 45px">
@@ -39,7 +39,7 @@
     <!-- End of Header -->
 
     <!-- Content DIV -->
-    <div class="fluid-container">
+    <div class="container-fluid">
         <div class="row justify-content-between">
             <!-- Company summary detail div -->
             <div class="col-md-6 "  >
