--- a/summary.html
+++ b/summary.html
@@ -146,7 +146,7 @@
 
 
   #content {
-    background-color: #f7f7f7;
+    background-color: #e2dede;
     height: 550px;
     border-radius: 0px 20px 0px 0px;
 
